# mzcld-demo

./: CODEOWNERS  Dockerfile  Makefile  README.md  collector-config.yaml  compose.yaml  hello.py  k6-script.js  main.py  pyproject.toml  version.json
.github/workflows/: build-and-push.yaml
app/: main.py  observability.py  routes.py  settings.py
load-tests/: Dockerfile  k6-script.js
script/: entrypoint.sh  run_webapp.sh  test.sh  update_version.sh
tests/: test_basic.py
